fix visible margin for btn bottom

--- a/wp-content/themes/children-circles/assets/css/media.css
+++ b/wp-content/themes/children-circles/assets/css/media.css
@@ -301,8 +301,12 @@
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 480px) {
-    .block_logo_text{
+    .block_logo_text {
         display: none;
+    }
+
+    .bbm_btn {
+        margin: 0 3px;
     }
 }
 
